Fix overflow bug in movieSearch

--- a/frontend/src/pages/MovieSearch/movieSearch.css
+++ b/frontend/src/pages/MovieSearch/movieSearch.css
@@ -94,15 +94,6 @@
   border-top: 0;
   border-radius: 0 0 10px 10px;
 }
-
-.search_bear_position {
-  flex: 1 1 auto;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .MovieThumbnails_container {
   width: 90%;
   /* height: 100%; */
@@ -111,7 +102,13 @@
   align-items: center;
   padding-top: 1rem;
 }
-
+.search_bear_position {
+  flex: 1 1 auto;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .MovieThumbnails_Loader {
   display: flex;
   justify-content: center;
@@ -155,7 +152,7 @@
   gap: 1rem;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 .MovieThumbnails_Row {
